--- a/frontend/src/sass/_thumbs.scss
+++ b/frontend/src/sass/_thumbs.scss
@@ -44,6 +44,17 @@
   }
 }
 
+.thumb-info {
+  background-color: #ebebeb;
+}
+
+@media screen and (max-width: 990px) {
+  .thumb-info {
+    display: none;
+  }
+  
+}
+
 .new-item {
   position: absolute;
   top: 0;
@@ -60,6 +71,10 @@
   z-index: 2;
 }
 
+.thumb-info .new-item {
+  position: relative;
+}
+
 .multiple-items {
   position: absolute;
   bottom: 0;
@@ -74,6 +89,10 @@
   align-items: center;
   justify-content: center;
   z-index: 2;
+}
+
+.thumb-info .multiple-items {
+  position: relative;
 }
 
 .banner-container {
@@ -177,3 +196,13 @@
   }
 }
 
+@media screen and (max-width: 576px) {
+  .info__container {
+    flex-direction: column;
+
+    .info__content {
+      margin-left: 0;
+      max-width: 100%;
+    }
+  }
+}
